# SAIR_Project

./: README.md  main.py  pyproject.toml
Data_loading_execution/: data_pipeline.py
NeuronNetworkLibrary/: README.md  try.py  ui.py
NeuronNetworkLibrary/src/: evaluator.py  main.py  mlp.py  model_init_real_data.py  model_train.py  neuron.ipynb  optimizer.py
NeuronNetworkLibrary/src/custom_nn_framework.egg-info/: SOURCES.txt  requires.txt  top_level.txt
configs/: config.yaml
custom_nn_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nnlib/: NeuronNetwork.ipynb  README.md  denslayer.py  learning_rate_S.py  main.py  mlp.py  model_init_real_data.py  model_train.py  neuron.ipynb  optimizer.py  try.py  ui.py
nnlib/Data_loading_execution/: data_pipeline.py
nnlib/Data_loading_execution.py/: data_loader.py
sair_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
