[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_nn_framework"
version = "0.1.0"
description = "A scratch-built Neural Network framework with Gradio UI"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "gradio",
    "pyyaml",
]

[tool.setuptools]
packages = ["NeuronNetworkLibrary", "Data_loading_execution"]
